# todolist-api

./: .env  .gitignore  README.md  config.py  data_base_module.py  database.py  main.py  pyproject.toml
tasks/: api.py  crud.py  models.py  schemas.py  views.py
