[tool.poetry]
name = "fastapi-first-app"
version = "0.1.0"
description = ""
authors = ["Lev Buben <lev.buben@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
sqlalchemy = "^2.0.37"
uvicorn = {extras = ["standart"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
